# Nebula4X

./: CMakeLists.txt  CMakePresets.json  PATCH_APPLY_INSTRUCTIONS.md  PATCH_APPLY_INSTRUCTIONS.txt  PATCH_NOTES.md  PATCH_PACK_NOTES.md  README.md  RoundNotes.md  nebula4x_patch.diff
Nebula4X_ - main/: CMakeLists.txt  CODE_OF_CONDUCT.md  PATCH_NOTES.md  PATCH_PACK_NOTES.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  nebula4x_patch.diff
Nebula4X_ - main/data/blueprints/: starting_blueprints.json
Nebula4X_ - main/docs/: ARCHITECTURE.md
Nebula4X_ - main/src/: cli_main.cpp
Nebula4X_ - main/src/core/: content_validation.cpp
Nebula4X_ - main/src/ui/: app.cpp  app.h  galaxy_map.cpp  panels.cpp  panels.h  system_map.h  ui_state.h
Nebula4X_ - main/src/util/: file_io.cpp
Nebula4X_ - main/tests/: test_auto_routing.cpp  test_determinism.cpp  test_order_repeat.cpp  test_random_scenario.cpp  test_serialization.cpp
Nebula4X_patch_main/: CMakeLists.txt  PATCH_NOTES.md  README.md
Nebula4X_patch_main/docs/: ARCHITECTURE.md
Nebula4X_patch_main/src/core/: simulation.cpp
Nebula4X_patch_main/src/ui/: panels.cpp
Nebula4X_patch_main/tests/: test_auto_routing.cpp  test_main.cpp  test_serialization.cpp  test_simulation.cpp
cmake/: Sanitizers.cmake  Warnings.cmake
data/: settings.json
data/blueprints/: resources.json  starting_blueprints.json
data/docs/: automation.md  command_console.md  compare.md  getting_started.md  hotkeys.md  index.md  intel_notebook.md  notifications.md  omnisearch.md  tours.md  troubleshooting.md  ui_tour.md
data/tech/: tech_tree.json
docs/: ARCHITECTURE.md  EVENT_LOG.md
include/nebula4x/core/: advisor.h  ai_economy.h  colonist_planner.h  colony_profiles.h  colony_schedule.h  contact_prediction.h  content_validation.h  contract_planner.h  date.h  design_stats.h  entities.h  enum_strings.h  fleet_battle_forecast.h  fleet_formation.h  freight_planner.h  fuel_planner.h  game_state.h  ground_battle_forecast.h  intercept.h  invasion_planner.h  maintenance_planner.h  mine_planner.h  order_planner.h  orders.h  planner_events.h  power.h  procgen_design_forge.h  procgen_jump_phenomena.h  procgen_nebula_microfield.h  procgen_nebula_stormfield.h  procgen_obscure.h  procgen_surface.h  region_planner.h  repair_planner.h  research_planner.h  research_schedule.h  (+13 more)
nebula4x_first_commit/nebula4x/: CONTRIBUTING.md  LICENSE  README.md
src/: cli_main.cpp  imgui_user_config.h  main.cpp  stb_sprintf.h  ui_unavailable_main.cpp
src/core/: advisor.cpp  ai_economy.cpp  colonist_planner.cpp  colony_profiles.cpp  colony_schedule.cpp  content_db.h  content_validation.cpp  contract_planner.cpp  date.cpp  design_stats.cpp  enum_strings.cpp  fleet_battle_forecast.cpp  fleet_formation.cpp  freight_planner.cpp  fuel_planner.cpp  ground_battle_forecast.cpp  invasion_planner.cpp  maintenance_planner.cpp  mine_planner.cpp  order_planner.cpp  orders.cpp  planner_events.cpp  procgen_design_forge.cpp  region_planner.cpp  repair_planner.cpp  research_planner.cpp  research_schedule.cpp  salvage_planner.cpp  scenario.cpp  security_planner.cpp  serialization.cpp  serialization.h  ship_profiles.cpp  simulation.cpp  simulation_internal.h  simulation_nav_helpers.h  simulation_orders.cpp  simulation_procgen.h  simulation_sensors.cpp  simulation_sensors.h  (+17 more)
src/ui/: advisor_window.cpp  advisor_window.h  app.cpp  app.h  automation_center_window.cpp  automation_center_window.h  balance_lab_window.cpp  balance_lab_window.h  battle_forecast_window.cpp  battle_forecast_window.h  colonist_window.cpp  colonist_window.h  colony_profiles_window.cpp  colony_profiles_window.h  compare_window.cpp  compare_window.h  content_validation_window.cpp  content_validation_window.h  context_forge_window.cpp  context_forge_window.h  contracts_window.cpp  contracts_window.h  dashboards_window.cpp  dashboards_window.h  data_lenses_window.cpp  data_lenses_window.h  design_studio_window.cpp  design_studio_window.h  diplomacy_window.cpp  diplomacy_window.h  docs_browser.cpp  docs_browser.h  economy_window.cpp  economy_window.h  entity_inspector_window.cpp  entity_inspector_window.h  fleet_manager_window.cpp  fleet_manager_window.h  fleet_plan_ui.cpp  fleet_plan_ui.h  (+164 more)
src/util/: autosave.cpp  digest.cpp  duel_simulator.cpp  duel_swiss_tournament.cpp  duel_tournament.cpp  event_export.cpp  file_io.cpp  json.cpp  json_merge_patch.cpp  json_pointer.cpp  json_pointer_autocomplete.cpp  log.cpp  regression_tape.cpp  save_delta.cpp  save_diff.cpp  save_merge.cpp  state_export.cpp  strings.cpp  tech_export.cpp  timeline_export.cpp  trace_events.cpp
tests/: test.h  test_advisor.cpp  test_ai_economy.cpp  test_ai_empire_fleet_missions.cpp  test_ai_research_plan.cpp  test_anomalies.cpp  test_anomaly_discovery.cpp  test_attack_lead_pursuit.cpp  test_auto_colonize.cpp  test_auto_explore.cpp  test_auto_freight.cpp  test_auto_mine.cpp  test_auto_refuel.cpp  test_auto_routing.cpp  test_auto_salvage.cpp  test_auto_tanker.cpp  test_autosave.cpp  test_blockade_economy.cpp  test_boarding.cpp  test_body_occlusion.cpp  test_civilian_trade_activity_prosperity.cpp  test_colonization.cpp  test_colony_profiles.cpp  test_colony_schedule.cpp  test_combat_doctrine.cpp  test_combat_events.cpp  test_contact_prediction.cpp  test_content_hot_reload.cpp  test_content_overlays.cpp  test_content_validation.cpp  test_crew_experience.cpp  test_date.cpp  test_design_forge_constraints.cpp  test_determinism.cpp  test_digests.cpp  test_diplomacy.cpp  test_duel_simulator.cpp  test_duel_swiss_tournament.cpp  test_duel_tournament.cpp  test_dynamic_poi_spawns.cpp  (+68 more)
tests/data/: content_base.json  content_mod.json  content_root_include.json  tech_base.json  tech_mod.json  tech_root_include.json
tools/: build_core.cmd  build_core.ps1  build_game.cmd  build_game.ps1  build_imgui_sdl.ps1  make_release_zip.py  make_release_zip.sh  run_tests.cmd  run_tests.ps1  test_make_release_zip.py  test_validate_content.py  validate_content.py
ui/: app.cpp  game_json_cache.cpp  panels.cpp  reference_graph_window.cpp  watchboard_window.cpp
ui_layouts/: default.ini
(+50 files in other folders)
